bk_ida/gccida/c1/ecleazs
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ecleazs/src/real.c:2341:12: error: expected expression
*( _OWORD *)( xi + 1) = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ecleazs/src/real.c:2341:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( xi + 1) = 0LL; 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ecleazs/src/obj/real.o] Error 1
